0.2.0-b38: notepad can now open/save files, fixed stuff
core misc
- fixed window layout becoming wonky when unminimizing
- fixed window buttons not showing
- the blue rectangle can now be disabled with a new setting, but it's still on by default

filesystem
- added a NonexistentInode class which represents a path that can be made into a file/folder/symlink
- added rds()

files/file picker
- files now opens files with notepad
- file picker now allows selecting new files with the textbox in the bottom

notepad
- can now save and open files

--- a/core/common.css
+++ b/core/common.css
@@ -428,9 +428,9 @@ button.bfull, input.bfull{ padding: 0.5em 1em; }
     display: inline-block;
     filter: opacity(0.85);
 }
-.titlebar-button-minimize{ background-image: url("../../iconol/button_minimize.svg"); }
-.titlebar-button-toggle{ background-image: url("../../iconol/button_maximize.svg"); }
-.titlebar-button-close{ background-image: url("../../iconol/button_close.svg"); }
+.titlebar-button-minimize{ background-image: url("../iconol/button_minimize.svg"); }
+.titlebar-button-toggle{ background-image: url("../iconol/button_maximize.svg"); }
+.titlebar-button-close{ background-image: url("../iconol/button_close.svg"); }
 
 .window-content{
     background-color: var(--gray);
