--- a/extensions/default/styles.css
+++ b/extensions/default/styles.css
@@ -586,9 +586,9 @@ button.bfull, input.bfull{ padding: 0.5em 1em; }
     filter: opacity(0.85);
 }
 .titlebar-buttons > a:hover{ filter: opacity(1); }
-.titlebar-button-minimize{ background-image: url("iconol/button_minimize.svg"); }
-.titlebar-button-toggle{ background-image: url("iconol/button_maximize.svg"); }
-.titlebar-button-close{ background-image: url("iconol/button_close.svg"); }
+.titlebar-button-minimize{ background-image: url("../../iconol/button_minimize.svg"); }
+.titlebar-button-toggle{ background-image: url("../../iconol/button_maximize.svg"); }
+.titlebar-button-close{ background-image: url("../../iconol/button_close.svg"); }
 
 .window-content{
     background-color: rgba(0, 0, 0, 0.5);
